--- a/index.html/index.html
+++ b/index.html/index.html
@@ -16,7 +16,7 @@
         type="text" placeholder=" Try Saree,Kurti or Search by Product Code">
         <a href="https://play.google.com/store/apps/details?id=com.meesho.supply&pid=pow_website&c=pow"> <h2>Download App</h2></a>    
         <h3>Become a Supplier</h3>
-        <div id="d"><h3 id="profile">Profile</h3>        
+        <div id="d"> <a href="./Signup.html/Signup.html"><h3 id="profile">Profile</h3></a>       
         </div>
       <h3>Cart</h3>    
     </div>
@@ -24,7 +24,9 @@
 
 
     <div id="Nav2">
-        <h3>Women Ethnic</h3>
+        <h3>Women Ethnic
+          
+        </h3>
         <h3>Women Western</h3>
         <h3>Men</h3>
         <h3>Kids</h3>
@@ -33,6 +35,10 @@
         <h3>Jewellery Accessories</h3>
         <h3>Bags & Footwear</h3>
         <h3>Electronics</h3>
+        <div class="subnav">
+                
+
+        </div>
 
     </div>
     <div id="cont1">
